horizontal scroll fix

--- a/styles/sass/_main.scss
+++ b/styles/sass/_main.scss
@@ -81,27 +81,36 @@ body {
     width: 40%;
 }
 
-.lebron {
-    margin-right: -3rem;
+.imgDiv1 {
+    width: 20%;
 }
-.jordan {
-    margin-left: -3rem;
+.imgDiv2 {
+    width: 20%;
 }
 
-.earvin {
-    margin-right: -2rem;
-    margin-left: 4rem;
-    width: 19%;
+.imgDiv3 {
+    width: 30%;
 }
-.tim {
-width: 40%;
-border-radius: 30%;
-margin: -7rem 3rem 0rem -10rem;
+
+.imgHeader1 {
+    width: 70%;
+    margin-right: -3rem;
 }
-.lebron,
-.jordan {
-    width: 25%;
-    height: 66%;
+
+.imgHeader2 {
+    width: 90%;
+    margin-right: -4rem;
+}
+
+.imgHeader3 {
+    width: 90%;
+    margin-left: -8rem;
+}
+
+.imgHeader4 {
+    width: 100%;
+    margin-left: -15rem;
+    margin-top: -5rem;
 }
 
 
@@ -150,6 +159,7 @@ margin: -7rem 3rem 0rem -10rem;
     justify-content: end;
     align-items: center;
     position: relative;
+    width: 100%;
 }
 
 .bubble {
@@ -178,7 +188,7 @@ margin: -7rem 3rem 0rem -10rem;
     border-radius: 10px;
     padding: 1rem;
     text-transform: uppercase;
-    margin-top: -1rem;
+    margin-top: 2rem;
     margin-bottom: 2rem;
 }
 
